# ERP-p

./: .env.example  .gitignore  BUGFIX_ORDER_PRODUCTION_STATUS_SYNC.md  BUGFIX_ORDER_STATUS_SYNC.md  Claude-Code-命令手册.md  DEPLOYMENT.md  EMERGENCY_FIX.md  GIT_WORKFLOW.md  LOGIN_FIX_GUIDE.md  MULTI_TABLE_SYNC_EXPLAINED.md  ORDERS_API_TEST_REPORT.md  PRODUCTION_API_TEST_REPORT.md  PRODUCTION_SCHEDULING_COMPLETE.md  PROJECT_COMPLETION.md  PROJECT_WORK_SUMMARY.md  PROXY_PIP_SOLUTION.md  QUICKSTART.md  QUICK_FIX.md  README.md  README_DEPLOY.md  SESSION_SUMMARY_20251222.md  SESSION_SUMMARY_20251224.md  STARTUP_GUIDE.md  TIME_INTERVAL_ANALYSIS.md  TROUBLESHOOTING.md  deploy.bat  deploy.ps1  deploy.sh  docker-compose.yml  install.bat  quick-start.bat  rebuild-all.bat  restart-clean.bat  start.bat  start.ps1  stop.bat  前端界面风格示例.html  印刷 ERP (Print-ERP) 前端 UIUX 设计规范.md  印刷ERP系统设计与实现.md  印刷ERP系统设计与实现_精简版.md  (+4 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: customer.py  material.py  order.py  payment.py  production.py  (+2 more)
backend/scripts/: create_tables.py  init_admin.py  init_db.py
backend/versions/: 20251208_1502_b8fe71a39c7b_initial_migration.py  20251221_1619_0b33d5224e29_add_production_tables.py  20251223_1333_368b63fcfacf_add_customers_table.py  20251223_1539_b56b3d71bb69_add_payment_table.py  20251226_1628_cce171d32748_add_stock_warning_and_stock_records.py
(+75 files in other folders)
